--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "algolia/algoliasearch-client-php": "^1.27",
         "barryvdh/laravel-debugbar": "~2.4",
         "doctrine/dbal": "~2.4",
         "laravel/framework": "5.5.*",
+        "laravel/scout": "^5.0",
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1"
     },
@@ -37,14 +39,6 @@
         ],
         "post-create-project-cmd": [
             "php artisan key:generate"
-        ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
         ],
         "post-autoload-dump":[
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
